--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print" />
 
-  {% include head.html %}
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <title>{{ page.title }} </title>
+  </head>
 
   <body>
+    <header>
+      <div class="inner">
+        <h1><a style="color: #FFF" href="{{ site.baseurl }}/"> {{ site.name }} </a></h1>
+        <h2> {{ site.tagline }} </h2>
+      </div>
+    </header>
 
-    {% include header.html %}
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+        <section id="main-content">
+          
+          {{ content }}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+        </section>
       </div>
     </div>
 
-    {% include footer.html %}
-
   </body>
-
 </html>
